# invoice_generator

./: .env.local  .gitignore  deploy.sh  drop_types.py  jest.config.ts  jest.setup.ts  middleware.ts  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  readme.md  run_fastapi.sh  start.sh  test.sh  vercel.env  vercel.json
.specify/memory/: constitution.md
__tests__/api/: clients.test.ts
__tests__/components/: status-badge.test.tsx
__tests__/hooks/: use-global-activity.test.tsx
__tests__/lib/: formatters.test.ts
api/: .env.example  __init__.py  alembic.ini  index.py  main.py  pyproject.toml  requirements.txt
api/core/: __init__.py  config.py  security.py
api/db/: __init__.py  session.py
api/db/migrations/: env.py
api/db/migrations/versions/: c2cef7f26801_initial_schema_string_ids.py
api/models/: __init__.py  auth.py  client.py  enums.py  quote.py  user.py
api/routers/: clients.py  quotes.py
api/schemas/: __init__.py  client.py  quote.py
api/services/: pdf_generator.py
api/tests/: conftest.py  test_auth.py  test_clients.py
app/: globals.css  layout.tsx  template.tsx
app/(auth)/: layout.tsx
app/(dashboard)/: layout.tsx  page.tsx
components/: main-nav.tsx  signature-canvas.tsx  status-badge.tsx  user-nav.tsx  user-profile-form.tsx
components/clients/: client-card.tsx  client-form.tsx  client-selector.tsx
components/dashboard/: fiscal-status.tsx  overview.tsx  (+3 more)
frontend/: jest.config.ts  middleware.ts  package.json  pnpm-lock.yaml
hooks/: use-mobile.ts
lib/: api-client.ts  auth-client.ts  auth.ts  formatters.ts  sync.ts
(+42 files in other folders)
